--- a/web/src/app/posts-grid/posts-grid.component.scss
+++ b/web/src/app/posts-grid/posts-grid.component.scss
@@ -1,10 +1,21 @@
-nb-card {
+div.container {
   min-height: calc(100vh - 8rem);
   margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
+
+  div {
+    flex-basis: 25%;
+    padding: 0.25rem;
+    overflow: hidden;
+    aspect-ratio: 1;
+  }
   div > img {
-    width: 10rem;
+    width:100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 0.25rem;
   }
 }
