--- a/web/src/app/posts-grid/posts-grid.component.html
+++ b/web/src/app/posts-grid/posts-grid.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div *ngFor="let post of posts">
     <img *ngIf="post.items[0].type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, post.items[0].filename)">
+    <img *ngIf="post.items[0].type == 'video'" loading="lazy" [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
   </div>
 </div>
