--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -1,5 +1,7 @@
 <nb-layout>
-  <nb-layout-header fixed>InstaArchiver</nb-layout-header>
+  <nb-layout-header fixed>
+    <h3>InstaArchiver</h3>
+  </nb-layout-header>
   <nb-sidebar>
     <nb-list>
       <nb-list-item 
