--- a/web/src/app/posts-grid/posts-grid.component.scss
+++ b/web/src/app/posts-grid/posts-grid.component.scss
@@ -1,3 +1,5 @@
+@use '../../themes.scss' as *;
+
 div.container {
   min-height: calc(100vh - 8rem);
   margin: 0;
@@ -15,10 +17,21 @@ div.container {
     max-width: calc(25% - 0.375rem);
     aspect-ratio: 1;
   }
+
   div > img {
     width:100%;
     height:100%;
     object-fit: cover;
     border-radius: 0.25rem;
+  }
+}
+
+@include nb-install-component() {
+  div.active {
+    border: none;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 0 4px nb-theme(color-success-transparent-focus-border);
+    outline: none;
+    transition: .1s;
   }
 }
