--- a/web/src/app/profile-detail/profile-detail.component.scss
+++ b/web/src/app/profile-detail/profile-detail.component.scss
@@ -1,17 +1,4 @@
-nb-card {
-  max-height: calc(100vh - 8rem);
-  margin: 0;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 6.25rem;
-}
-
-nb-card-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-nb-card-body div.row {
+div.row {
   display: flex;
   p.title { flex: 5; margin-right: 1rem;}
   p.detail { flex: 15 }
