--- a/web/src/app/posts/posts.component.html
+++ b/web/src/app/posts/posts.component.html
@@ -60,17 +60,21 @@
       <nb-card-header>
         <nb-user 
           [name]="profile.display_name" 
-          [title]="profile.username" 
+          [title]="selectedShortcode ?? profile.username" 
           [picture]="profileService.getProfileImagePath(profile.image_filename)"
           shape="rectangle" size="large">
         </nb-user>
-        <nb-actions size="small">
-          <nb-action icon="edit-outline" title="Edit Profile" (click)="openEditWindow(profile.username, profile.display_name)"></nb-action>
-          <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>
+        <nb-actions size="small" *ngIf="selectedShortcode">
+          <nb-action icon="trash-2-outline" title="Delete Media" (click)="editProfile(profile.username, profile.display_name)"></nb-action>
+          <nb-action icon="close-circle-outline" title="Close posts" (click)="closePost()"></nb-action>    
+        </nb-actions>
+        <nb-actions size="small" *ngIf="!selectedShortcode">
+          <nb-action icon="edit-outline" title="Edit Profile" (click)="editProfile(profile.username, profile.display_name)"></nb-action>
+          <nb-action icon="external-link" title="Open Instagram Profile" (click)="openInstagramProfile(profile.username)"></nb-action>    
         </nb-actions>
       </nb-card-header>
       <nb-card-body>
-        <div *ngIf="selectedShortcode; else elseBlock">{{selectedShortcode}}</div>
+        <post-detail *ngIf="selectedShortcode; else elseBlock"></post-detail>
         <ng-template #elseBlock>
           <profile-detail [profile]="profile"></profile-detail>
         </ng-template>
