--- a/web/src/app/post-detail/post-detail.component.html
+++ b/web/src/app/post-detail/post-detail.component.html
@@ -1,2 +1,9 @@
-<div *ngIf="shortcode && postService.get(shortcode) as post"></div>
-<p>post-detail works!</p>
+<div *ngIf="shortcode && postService.get(shortcode) as post">
+  <div *ngFor="let item of post.items; let itemIndex=index;">
+    <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
+    <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
+      <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
+    </video>
+    <!-- <button nbButton (click)="delete(post, item, postIndex, itemIndex)"><nb-icon icon="trash-2-outline"></nb-icon></button> -->
+  </div>
+</div>
