--- a/web/src/app/post-detail/post-detail.component.scss
+++ b/web/src/app/post-detail/post-detail.component.scss
@@ -1,8 +1,18 @@
+div.media {
+  display: flex;
+  flex-direction: column;
+  // align-items: center;
+  gap: 1rem;
+}
+
 img {
   width: 100%;
 }
 
 video {
-  width: 100%;
-  max-height: 100%;
+  max-width: 100%;
+}
+
+div.caption {
+  padding: 0 1rem 1rem 1rem;
 }
