--- a/web/src/app/post-detail/post-detail.component.html
+++ b/web/src/app/post-detail/post-detail.component.html
@@ -1,10 +1,19 @@
-<div *ngIf="post" class="media">
-  <ng-template ngFor let-item [ngForOf]="post.items" let-i="index">
-    <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
-    <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
-      <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
-    </video>
-  </ng-template>
+<div *ngIf="post">
+  <div class="media">
+    <!-- <ng-template ngFor let-item [ngForOf]="post.items" let-i="index">
+      <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
+      <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
+        <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
+      </video>
+    </ng-template> -->
+    <div *ngFor="let item of post.items; index as i" class="item">
+      <img *ngIf="item.type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, item.filename)">
+      <video *ngIf="item.type == 'video'" preload="none" controls muted [poster]="postService.getPosterPath(post.username, item.thumb_image_filename)">
+        <source [src]="postService.getMediaPath(post.username, item.filename)" type="video/mp4">
+      </video>
+      <button nbButton (click)="delete(post, item)"><nb-icon icon="trash-2-outline"></nb-icon></button>
+    </div>
+  </div>
   <div class="caption">
     <b>{{ post.timestamp | date }}</b>
     <div>{{ post.caption }}</div>
