--- a/web/src/app/post-detail/post-detail.component.scss
+++ b/web/src/app/post-detail/post-detail.component.scss
@@ -1,8 +1,22 @@
 div.media {
   display: flex;
   flex-direction: column;
-  // align-items: center;
   gap: 1rem;
+}
+
+div.item {
+  position: relative;
+  > button {
+    position: absolute;
+    right: 0.5rem;
+    top: 0.5rem;
+    display: none;
+    z-index: 2;
+  }
+}
+
+div.item:hover > button {
+  display:block;
 }
 
 img {
@@ -14,5 +28,5 @@ video {
 }
 
 div.caption {
-  padding: 0 1rem 1rem 1rem;
+  padding: 1rem;
 }
