--- a/web/src/app/posts-grid/posts-grid.component.html
+++ b/web/src/app/posts-grid/posts-grid.component.html
@@ -1,11 +1,14 @@
 <div class="container">
-  <div 
-    *ngFor="let post of posts"
-    [routerLink]="['/posts']"
-    [queryParams]="{selected: post.shortcode}" 
-    [queryParamsHandling]="'merge'"
-    routerLinkActive="active">
-    <img *ngIf="post.items[0].type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, post.items[0].filename)">
-    <img *ngIf="post.items[0].type == 'video'" loading="lazy" [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
-  </div>
+  <ng-template ngFor let-shortcode [ngForOf]="postService.shortcodes">
+    <div 
+      *ngIf="postService.get(shortcode) as post"
+      [routerLink]="['/posts']"
+      [queryParams]="{selected: shortcode}" 
+      [queryParamsHandling]="'merge'"
+      routerLinkActive="active"
+    >
+      <img *ngIf="post.items[0].type == 'image'" loading="lazy" [src]="postService.getMediaPath(post.username, post.items[0].filename)">
+      <img *ngIf="post.items[0].type == 'video'" loading="lazy" [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">  
+    </div>
+  </ng-template>
 </div>
