--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,9 +1,12 @@
-@import 'themes';
-
-// framework component styles
-@import '~@nebular/theme/styles/globals';
-
-// install the framework styles
+@use 'themes' as *;
+@use '@nebular/theme/styles/globals' as *;
 @include nb-install() {
   @include nb-theme-global();
-};
+}
+
+.nb-theme-default nb-sidebar .scrollable {
+    padding: 0;
+}
+.nb-theme-dark nb-sidebar .scrollable {
+  padding: 0;
+}
