--- a/web2/src/styles.scss
+++ b/web2/src/styles.scss
@@ -5,4 +5,9 @@
 @include nb-install() {
   @include nb-theme-global();
 };
-/* You can add global styles to this file, and also import other style files */
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: black;
+  }
+}
