--- a/web2/src/app/app.component.html
+++ b/web2/src/app/app.component.html
@@ -3,5 +3,13 @@
     <button nbButton status="success" size="tiny" (click)="toggle()">Toggle</button>
   </nb-layout-header>
   <nb-layout-column></nb-layout-column>
-  <nb-sidebar></nb-sidebar>
+  <nb-sidebar>
+    <div *ngIf="response$ | async as response">
+      <nb-list>
+        <nb-list-item *ngFor="let profile of response.profiles">
+          <nb-user size="medium" shape="rectangle" [name]="profile.display_name"></nb-user>
+        </nb-list-item>
+      </nb-list>
+    </div>
+  </nb-sidebar>
  </nb-layout>
