--- a/web2/src/themes.scss
+++ b/web2/src/themes.scss
@@ -4,13 +4,15 @@
 @use '@nebular/theme/styles/themes/dark';
 
 $nb-themes: nb-register-theme((
-  list-item-padding: 0.5rem,
+  list-item-padding: 0.75rem,
   user-name-text-font-weight: 600,
+  user-small-name-text-font-size: 15px,
   sidebar-padding: 0,
 ), default, default);
 
 $nb-themes: nb-register-theme((
-  list-item-padding: 0.5rem,
+  list-item-padding: 0.75rem,
   user-name-text-font-weight: 600,
+  user-small-name-text-font-size: 15px,
   sidebar-padding: 0,
 ), dark, dark);
