--- a/web2/src/app/posts-grid/posts-grid.component.html
+++ b/web2/src/app/posts-grid/posts-grid.component.html
@@ -1,1 +1,16 @@
-<p>posts-grid works!</p>
+<div class="container">
+  <div *ngIf="response$ | async as response" class="grid">
+    <div *ngFor="let post of response.posts" [routerLink]="[post.shortcode]" routerLinkActive="active">
+      <img *ngIf="post.items[0].type == 'image'" loading="lazy"
+        [src]="postService.getMediaPath(post.username, post.items[0].filename)">
+      <img *ngIf="post.items[0].type == 'video'" loading="lazy"
+        [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
+    </div>
+    <ng-template [ngIf]="response.posts.length < 5">
+      <div *ngFor="let i of [].constructor(10)"></div>
+    </ng-template>
+  </div>
+  <div class="detail">
+    <router-outlet></router-outlet>
+  </div>
+</div>
