--- a/web2/src/app/posts-grid/posts-grid.component.scss
+++ b/web2/src/app/posts-grid/posts-grid.component.scss
@@ -1,3 +1,5 @@
+@use '../../themes.scss' as *;
+
 div.container {
   display: flex;
   align-items: flex-start;
@@ -16,20 +18,22 @@ div.grid {
     gap: 0.5rem;
   }
 
-  .active {
-    border: none;
-    border-radius: 0.25rem;
-    box-shadow: 0 0 0 4px #0091EA;
-    outline: none;
-    transition: .1s;
-  }
-
   img {
     width: 100%;
     height: 100%;
     aspect-ratio: 0.75;
     object-fit: cover;
     border-radius: 0.25rem;
+  }
+}
+
+@include nb-install-component() {
+  .active {
+    border: none;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 0 4px nb-theme(color-success-transparent-focus-border);
+    outline: none;
+    transition: .1s;
   }
 }
 
