--- a/web2/src/app/app.component.html
+++ b/web2/src/app/app.component.html
@@ -11,6 +11,7 @@
         (selectedChange)="selectedYearChanged($event)"
       >
         <nb-option>All Years</nb-option>
+        <nb-option value="2023">2023</nb-option>
         <nb-option value="2022">2022</nb-option>
         <nb-option value="2021">2021</nb-option>
         <nb-option value="2020">2020</nb-option>
