--- a/web2/src/app/post-detail/post-detail.component.scss
+++ b/web2/src/app/post-detail/post-detail.component.scss
@@ -30,7 +30,7 @@ nb-card {
     justify-content: space-between;
   }
 
-  nb-card-footer {
+  nb-card-footer.media {
     display: flex;
     align-items: center;
     justify-content: space-between;
