--- a/web2/src/app/app.component.html
+++ b/web2/src/app/app.component.html
@@ -47,6 +47,7 @@
         <nb-list-item 
           *ngFor="let profile of response.profiles"
           [routerLink]="['/', profile.username]"
+          [queryParams]="{selected: null}" 
           queryParamsHandling="merge"
           routerLinkActive="active"
         >
