--- a/web2/src/app/posts-grid/posts-grid.component.html
+++ b/web2/src/app/posts-grid/posts-grid.component.html
@@ -6,11 +6,16 @@
       [queryParams]="{selected: post.shortcode}" 
       queryParamsHandling="merge"
       routerLinkActive="active"
+      class="item"
     >
       <img *ngIf="post.items[0].type == 'image'" loading="lazy"
         [src]="postService.getMediaPath(post.username, post.items[0].filename)">
       <img *ngIf="post.items[0].type == 'video'" loading="lazy"
         [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
+      <div class="overlay">
+        <nb-icon *ngIf="post.type == 'video'" status="basic" icon="film-outline"></nb-icon>
+        <nb-icon *ngIf="post.type == 'sidecar'" status="basic" icon="layers-outline"></nb-icon>
+      </div>
     </div>
     <ng-template [ngIf]="response.posts.length < 5">
       <div *ngFor="let i of [].constructor(10)"></div>
