--- a/web2/src/app/post-detail/post-detail.component.scss
+++ b/web2/src/app/post-detail/post-detail.component.scss
@@ -36,4 +36,8 @@ nb-card {
     justify-content: space-between;
     padding: 0.25rem 1rem;
   }
+
+  div.shortcode {
+    padding-left: 0.5rem;
+  }
 }
