--- a/web2/src/app/posts-grid/posts-grid.component.html
+++ b/web2/src/app/posts-grid/posts-grid.component.html
@@ -1,22 +1,26 @@
 <div class="container">
   <div *ngIf="response$ | async as response" class="grid">
-    <div 
-      *ngFor="let post of response.posts" 
-      [routerLink]="[]"
-      [queryParams]="{selected: post.shortcode}" 
-      queryParamsHandling="merge"
-      routerLinkActive="active"
-      class="item"
-    >
-      <img *ngIf="post.items[0].type == 'image'" loading="lazy"
-        [src]="postService.getMediaPath(post.username, post.items[0].filename)">
-      <img *ngIf="post.items[0].type == 'video'" loading="lazy"
-        [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
-      <div class="overlay">
-        <nb-icon *ngIf="post.type == 'video'" status="basic" icon="film-outline"></nb-icon>
-        <nb-icon *ngIf="post.type == 'sidecar'" status="basic" icon="layers-outline"></nb-icon>
+    <ng-template ngFor let-shortcode [ngForOf]="postService.shortcodes">
+      <div 
+        *ngIf="postService.get(shortcode) as post"
+        [routerLink]="[]"
+        [queryParams]="{selected: post.shortcode}" 
+        queryParamsHandling="merge"
+        routerLinkActive="active"
+        class="item"
+      >
+        <img *ngIf="post.items[0].type == 'image'" loading="lazy"
+          [src]="postService.getMediaPath(post.username, post.items[0].filename)">
+        <img *ngIf="post.items[0].type == 'video'" loading="lazy"
+          [src]="postService.getPosterPath(post.username, post.items[0].thumb_image_filename)">
+        <div class="overlay" *ngIf="post.type == 'video'">
+          <nb-icon status="basic" icon="film-outline"></nb-icon>
+        </div>
+        <div class="overlay" *ngIf="post.type == 'sidecar'">
+          <nb-icon status="basic" icon="layers-outline"></nb-icon>
+        </div>
       </div>
-    </div>
+    </ng-template>
     <ng-template [ngIf]="response.posts.length < 5">
       <div *ngFor="let i of [].constructor(10)"></div>
     </ng-template>
