--- a/web/src/app/post-detail/post-detail.component.scss
+++ b/web/src/app/post-detail/post-detail.component.scss
@@ -1,36 +1,43 @@
-div.media {
+div.container {
   display: flex;
   flex-direction: column;
+  padding: 1rem;
   gap: 1rem;
-}
+  height: calc(100vh - 5rem);
+  overflow: scroll;
+  position: fixed;
 
-div.item {
-  position: relative;
-  > button {
-    position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
-    display: none;
-    z-index: 2;
+  @media (max-width: 1500px) {
+    padding: 0.5rem;
+    gap: 0.5rem;
   }
 }
 
-div.item:hover > button {
-  display:block;
-}
+nb-card {
+  img {
+    width: 100%;
+    border-radius: 4px 4px 0 0;
+  }
+  
+  video {
+    max-width: 100%;
+    max-height: 60rem;
+    border-radius: 4px 4px 0 0;
+  }
 
-img {
-  width: 100%;
-}
+  nb-card-header {
+    display: flex;
+    justify-content: space-between;
+  }
 
-video {
-  max-width: 100%;
-}
+  nb-card-footer.media {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.25rem 1rem;
+  }
 
-div.caption {
-  padding: 1rem;
-  div {
-    max-width: 35rem;
-    word-wrap: break-word;
+  div.shortcode {
+    padding-left: 0.5rem;
   }
 }
