--- a/web/src/app/post-detail/post-detail.component.scss
+++ b/web/src/app/post-detail/post-detail.component.scss
@@ -42,6 +42,7 @@ nb-card {
 
   nb-card-footer.confirmation {
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
   }  
 }
