hides title when narrow

--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -16,6 +16,9 @@ nb-layout-header {
     @media (max-width: 1500px) {
       width: 12.25rem;
     }
+    @media (max-width: 75rem) {
+      display: none;
+    }
   }
 
   div.filter {
