--- a/web/src/app/app.component.scss
+++ b/web/src/app/app.component.scss
@@ -1,15 +1,5 @@
 @use '../themes.scss' as *;
 
-@include nb-install-component() {
-  nb-sidebar nb-list-item:hover {
-    background-color: nb-theme(color-primary-transparent-hover);
-  }
-    
-  nb-sidebar nb-list-item.active {
-    background-color: nb-theme(color-primary-transparent-active);
-  }
-}
-
 nb-layout-header {
   h4 {
     width: 12.75rem;
@@ -24,5 +14,29 @@ nb-layout-header {
   div.filter {
     display: flex;
     gap: 0.5rem;
+  }
+}
+
+@include nb-install-component() {
+  nb-sidebar nb-list-item:hover {
+    background-color: nb-theme(color-primary-transparent-hover);
+  }
+    
+  nb-sidebar nb-list-item.active {
+    background-color: nb-theme(color-primary-transparent-active);
+  }
+}
+
+nb-sidebar nb-list-item.all-posts {
+  nb-icon {
+    margin: 0.25rem;
+  }
+  div {
+    margin-left: 0.25rem;
+    font-size: 15px;
+    font-weight: 600;
+    @media (max-width: 75rem) {
+      display: none;
+    }
   }
 }
